--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "engines" : {
+"node" : "12.14.0",
+"npm" : "6.13.4"
+  },
   "scripts": {
     "start": "node app.js",
     "test": "nodemon ./bin/www"
