--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "engines" : {
-"node" : "12.14.0",
-"npm" : "6.13.4"
+  "engines": {
+    "node": "12.14.0",
+    "npm": "6.13.4"
   },
   "scripts": {
     "start": "node app.js",
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "googleapis": "^43.0.0",
+    "mongoose": "^5.9.10",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
     "query-string": "^6.8.3"
