--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "node app.js",
-    "test": "nodemon ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
@@ -23,8 +23,5 @@
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
     "query-string": "^6.8.3"
-  },
-  "devDependencies": {
-    "nodemon": "^1.19.2"
   }
 }
