--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "npm": "6.13.4"
   },
   "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www",
+    "test": "nodemon ./bin/www"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "express-session": "^1.16.2",
     "googleapis": "^43.0.0",
     "mongoose": "^5.9.10",
+    "nodemon": "^2.0.3",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
     "query-string": "^6.8.3"
