--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "6.13.4"
   },
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon app.js",
     "test": "nodemon ./bin/www"
   },
   "author": "",
