--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ GOOGLE_CLIENT_ID = 457586852880-ks0gj4c7ij21aoh3uqf6ftmechjmohgk.apps.googleuser
 GOOGLE_CLIENT_SECRET = rZFUjmcwRfvZ-GAQgEIunwTR
 
 SESSION_NAME = "GoogleOAuthSession"
-SESSION_SECRET = "secretsecret"
+SESSION_SECRET = "secretsecret
